<resources>
    <string name="app_name">Angus Paint</string>
    <string name="action_settings">Settings</string>
    <string name="about">About</string>
    <string name="faqs">FAQs/Directions</string>
    <string name="wish_to_save">Do you wish to\nsave before continuing?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="cancel">Cancel</string>
    <string name="which_orientation">Which orientation would you\nlike for your painting?</string>
    <string name="load">Load</string>
    <string name="save">Save</string>
    <string name="neww">New</string>
    <string name="brush_editor">Brush Editor</string>
    <string name="brush_size">Brush Size</string>
    <string name="color_picker">Color Picker</string>
    <string name="set">Set</string>
</resources>
