<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!-- load item,  loads an image from
     phone storage and paint on it with the app -->
    <item android:id="@+id/item_load"
        android:title="@string/load"
        android:icon="@drawable/ic_file_download_black_24dp"
        app:showAsAction="always"/>

    <!-- new item, opens a new painting-->
    <item android:id="@+id/item_save"
        android:title="@string/save"
        android:icon="@drawable/ic_save_black_24dp"
        app:showAsAction="always"/>

    <!-- save item, save an image to the phone-->
    <item android:id="@+id/item_new"
        android:title="@string/neww"
        android:icon="@drawable/ic_create_black_24dp"
        app:showAsAction="always"/>

    <!-- save item, save an image to the phone-->
    <item android:id="@+id/brush_editor"
        android:title="@string/brush_editor"
        android:icon="@drawable/ic_palette_black_24dp"
        app:showAsAction="always"/>

    <!-- About, belongs in the Overflow Menu-->
    <item android:id="@+id/item_about"
        android:title="@string/about"
        app:showAsAction="never"/>

    <!-- faqs, belongs in the Overflow Menu-->
    <item android:id="@+id/item_faqs"
        android:title="@string/faqs"
        app:showAsAction="never"/>

</menu>